# Terminal_Jump

./: CMakeLists.txt  LICENSE  README.md  main.cpp  scenario.txt
cms/: CMakeLists.txt  CenteredMenu.cpp  CenteredMenu.h
scenarios/: scenario.txt  simple_scenario.txt
src/: Box.cpp  CMakeLists.txt  Jumper.cpp  Jumper.h  Obstacle.cpp  Obstacle.h  Parser.cpp  Parser.h  structs.h
